; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dirwrite.c_TIFFCheckpointDirectory.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_dirwrite.c_TIFFCheckpointDirectory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32* }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@SEEK_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TIFFCheckpointDirectory(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %4 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %11 = call i32 @TIFFSetupStrips(%struct.TYPE_9__* %10)
  br label %12

12:                                               ; preds = %9, %1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = load i32, i32* @TRUE, align 4
  %15 = load i32, i32* @FALSE, align 4
  %16 = call i32 @TIFFWriteDirectorySec(%struct.TYPE_9__* %13, i32 %14, i32 %15, i32* null)
  store i32 %16, i32* %3, align 4
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %19 = load i32, i32* @SEEK_END, align 4
  %20 = call i32 @TIFFSeekFile(%struct.TYPE_9__* %18, i32 0, i32 %19)
  %21 = call i32 @TIFFSetWriteOffset(%struct.TYPE_9__* %17, i32 %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @TIFFSetupStrips(%struct.TYPE_9__*) #1

declare dso_local i32 @TIFFWriteDirectorySec(%struct.TYPE_9__*, i32, i32, i32*) #1

declare dso_local i32 @TIFFSetWriteOffset(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @TIFFSeekFile(%struct.TYPE_9__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
